idに対する子・親の一覧を取得するエンドポイントをそれぞれ作成
